@@ -1,6 +1,15 @@
 News
 ====
 
+unreleased
+----------
+
+Bug Fixes
+~~~~~~~~~
+
+- Fix a bug in ``SignedSerializer`` preventing secrets from containing
+  higher-order characters. See https://github.com/Pylons/webob/issues/136
+
 1.3.1 (2013-12-13)
 ------------------
 
